--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -24,4 +24,10 @@
 	</main>
 		
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+	<head></head>
+	<body></body>
 </html>
